# networking_analyst_AI

./: .gitignore  CMakeLists.txt  CMakelists.txt  Makefile  README.md  cau_truc_thu_muc.txt  script.sh  test_lib  test_lib.cpp  test_packet_filter
backup/: packet_filter.cpp  packet_filter.hpp
backup/commonm/: packet_parser.hpp
data/blacklist/: ip_blacklist.txt
data/pcap/: capture_20251125_161709.pcap
fake/: packet_sniffer  packet_sniffer.cpp
interfaces/cli/: CMakeLists.txt  Makefile  cli_commands.cpp  cli_commands.hpp  cli_main.cpp  cli_parser.cpp  cli_parser.hpp  packet_capture_cli.cpp
interfaces/gui/: main.cpp  main_window.cpp  main_window.hpp
interfaces/gui/dialogs/: capture_dialog.cpp  capture_dialog.hpp  preferences_dialog.cpp  preferences_dialog.hpp
interfaces/gui/models/: packet_table_model.cpp  packet_table_model.hpp
interfaces/gui/utils/: color_rules.cpp  color_rules.hpp
interfaces/gui/widgets/: filter_bar_widget.cpp  filter_bar_widget.hpp  packet_detail_widget.cpp  packet_detail_widget.hpp  packet_hex_widget.cpp  packet_hex_widget.hpp  packet_list_widget.cpp  packet_list_widget.hpp  status_bar_widget.cpp  status_bar_widget.hpp
src/: ips  main  main.cpp
src/common/: Makefile  config_manager.cpp  config_manager.hpp  flow_manager.cpp  flow_manager.hpp  logger.cpp  logger.hpp  network_utils.cpp  network_utils.hpp  packet_parser.cpp  packet_parser.hpp  utils.cpp  utils.hpp
src/core/layer1/: example_packet_ingress.cpp  network_interface.hpp  packet_filter.cpp  packet_filter.hpp  packet_ingress.cpp  packet_ingress.hpp  test_packet_ingress  test_packet_ingress.cpp  xdp_filter.bpf.c  xdp_filter.cpp  xdp_filter.hpp
src/core/layer1/filter/: filter_expression.cpp  filter_expression.hpp  filter_field_evaluator.cpp  filter_field_evaluator.hpp  filter_parser.cpp  filter_parser.hpp  filter_types.cpp  filter_types.hpp  packet_filter.cpp  packet_filter.hpp  predefined_filters.cpp  predefined_filters.hpp
src/core/storage/: packet_storage.cpp  packet_storage.hpp  pcap_writer.cpp  pcap_writer.hpp
tests/: CMakeLists.txt
tests/cli/: Makefile  test_packet_ingress_cli.cpp
tests/gui/: CMakeLists.txt  Makefile  main.cpp  main_window.cpp  main_window.hpp  packet_capture_gui.hpp  packet_detail_dialog.cpp  packet_index.cpp  packet_index.hpp
tests/layer1/: CMakeLists.txt  test_capture  test_filter.cpp  test_packet_capture  test_packet_capture.cpp  test_packet_capture_storage.cpp
tests/unit/: Makefile  test_common_config_manager  test_common_config_manager.cpp  test_common_flow_manager  test_common_flow_manager.cpp  test_common_logger  test_common_logger.cpp  test_common_network_utils  test_common_network_utils.cpp  test_common_packet_parser  test_common_packet_parser.cpp  test_common_utils  test_common_utils.cpp  test_packet_ingress_cli.cpp  test_packet_parser
